@@ -1,3 +1,7 @@
+Wed Sep 07 14:45:53 2016  Jiri (George) Lebl <jirka@5z.com>
+
+	* ve/ve-misc.c: ignore a warning in ve_strftime
+
 Wed Aug 24 17:58:18 2016  Jiri (George) Lebl <jirka@5z.com>
 
 	* examples/complex-analysis-mesh.gel,
